I have added h1 heading

--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
 
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam eligendi necessitatibus hic distinctio vel
             quae esse. Quo et veritatis est maiores hic, unde labore voluptate. Odit magni sint sunt suscipit.</p>
+
+            <h1>hello world</h1>
     </div>
 
 
